# Ai-Robotic-TextBook

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  setup.cfg  sidebars.ts
.mcp/: config.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: README.md  __init__.py  agent.py  main.py  models.py  pyproject.toml  requirements.txt  retrieve.py
backend/tests/: test_fastapi_chat.py
docs/: README.md  preface.md
docs/appendices/: accuracy-check-process.md  code-verification-process.md  glossary.md  hardware.md  ieee-citation-guidelines.md  install-guides.md  references.md
docs/capstone/: evaluation_rubric.md  implementation_guide.md  index.md  project_overview.md  system_design.md
docs/module-1/: concepts.md  index.md  introduction.md  launch_files.md  mini_lab_1.md  packages_workspaces.md  quiz_1.md  services_actions.md  urdf_basics.md
docs/module-2/: gazebo_setup.md  index.md  introduction.md  mini_lab_2.md  quiz_2.md  simulating_sensors.md  unity_hri.md  urdf_sdf_pipeline.md
docs/module-3/: index.md  isaac_ros_perception.md  isaac_ros_slam.md  isaac_sim_intro.md  jetson_deployment.md  mini_lab_3.md  quiz_3.md  synthetic_data.md  usd_workflow.md
docs/module-4/: index.md  llm_planning.md  mini_lab_4.md  motion_planning.md  perception_pipeline.md  quiz_4.md  ros_vla_integration.md  safety_hrc.md  vlm_intro.md  whisper.md
examples/module-1/: display_urdf.py  simple_pub_sub.py  simple_service.py
examples/module-2/: read_lidar.py  (+1 more)
(+154 files in other folders)
